--- a/index.HTML
+++ b/index.HTML
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu projeto</title>
+    <title>Meus links - Laura</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-color: rgb(255, 194, 224);">
-    <h1 style="color: rgb(214, 0, 107);">Minha primeira página</h1>
-    <img src="flor-rosa-com-folhas_24877-81623.jpg" alt="" style="width: 300px;">
-</body> 
+<body>
+    <div>
+        <header>
+            <img src="images.jpeg" alt="Minha foto de perfil">
+            <h1>Laura</h1>
+            <p>Seja bem vindo(a)! Abaixo estão meus links principais.</p>
+        </header>
+    </div>
+</body>
 </html>
