--- a/index.HTML
+++ b/index.HTML
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>
-        <header>
-            <img src="images.jpeg" alt="Minha foto de perfil">
+    <div class="container">
+        <header class="perfil">
+            <img src="flor-rosa-com-folhas_24877-81623.jpg" alt="Minha foto de perfil" class="foto-perfil">
             <h1>Laura</h1>
             <p>Seja bem vindo(a)! Abaixo estão meus links principais.</p>
         </header>
+        <main class="links">
+            <a href="https://www.instagram.com/lauraa.volff" target="_blank" class="botao-instagram">
+                <i class="fab fa-instagram"></i>Instagram
+            </a>
+        </main>
     </div>
 </body>
 </html>
