--- a/index.HTML
+++ b/index.HTML
@@ -14,7 +14,7 @@
             <p>Seja bem vindo(a)! Abaixo estão meus links principais.</p>
         </header>
         <main class="links">
-            <a href="https://www.instagram.com/lauraa.volff" target="_blank" class="botao-instagram">
+            <a href="https://www.instagram.com/lauraa.volff" target="_blank" class="link-botao instagram">
                 <i class="fab fa-instagram"></i>Instagram
             </a>
         </main>
